feat(BE-(92): add swagger docs for feedback endpoint
