# docs/swagger.json
@@ -1,112 +1,4 @@
 {
-
-  "basePath": "/api/v1",
-  "definitions": {
-    "model.Ping": {
-      "properties": {
-        "email": {
-          "type": "string"
-        }
-      },
-      "type": "object"
-    },
-    "utility.Response": {
-      "properties": {
-        "code": {
-          "type": "integer"
-        },
-        "data": {},
-        "error": {
-          "description": "for errors that occur even if request is successful"
-        },
-        "extra": {},
-        "message": {
-          "type": "string"
-        },
-        "name": {
-          "description": "name of the error",
-          "type": "string"
-        },
-        "status": {
-          "type": "string"
-        }
-      },
-      "type": "object"
-    }
-  },
-  "host": "localhost:9000",
-  "info": {
-    "contact": {},
-    "description": "A picture mining service API in Go using Gin framework.",
-    "title": "Minergram",
-    "version": "1.0"
-  },
-  "paths": {
-    "/api/v1/health": {
-      "get": {
-        "description": "Responds with the server status as JSON.",
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/utility.Response"
-            }
-          }
-        },
-        "summary": "Checks the status of the server",
-        "tags": ["health"]
-      },
-      "post": {
-        "description": "Send a dummy post request to test the status of the server",
-        "parameters": [
-          {
-            "description": "Ping JSON",
-            "in": "body",
-            "name": "ping",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/model.Ping"
-            }
-          }
-        ],
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/utility.Response"
-            }
-          }
-        },
-        "summary": "Checks the status of the server",
-        "tags": ["health"]
-      }
-    },
-    "/admin/users/{username}": {
-      "delete": {
-        "tags": ["admin"],
-        "summary": "Delete a user",
-        "description": "Delete a user",
-        "operationId": "deleteUser",
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "description": "",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "user successfully deleted",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object"
     "schemes": [
         "https"
     ],
@@ -148,34 +40,6 @@
                 }
             }
         },
-        "/admin/users": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "List all users",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "admin"
-                ],
-                "summary": "List all users",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.User"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/health": {
             "get": {
                 "description": "Responds with the server status as JSON.",
@@ -194,20 +58,36 @@
                         }
                     }
                 }
-              }
-            }
-          },
-          "500": {
-            "description": "unable to delete user",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object"
+            },
+            "post": {
+                "description": "Send a dummy post request to test the status of the server",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Checks the status of the server",
+                "parameters": [
+                    {
+                        "description": "Ping JSON",
+                        "name": "ping",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Ping"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utility.Response"
+                        }
+                    }
                 }
-              }
             }
-
-          }
         },
         "/batch-service/process-batch-api": {
             "post": {
@@ -239,6 +119,66 @@
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utility.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/feedback": {
+            "post": {
+                "description": "Send feedback to discripto",
+                "tags": [
+                    "Feedback"
+                ],
+                "summary": "Sends feedback to discripto",
+                "parameters": [
+                    {
+                        "description": "Create feedback",
+                        "name": "Feedback",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.FeedbackRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.FeedbackCreatedResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utility.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/feedback/all": {
+            "get": {
+                "description": "Gets all feedback sent to discripto",
+                "tags": [
+                    "Feedback"
+                ],
+                "summary": "Gets all feedback sent discripto",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Feedback"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/utility.Response"
                         }
@@ -399,43 +339,8 @@
                         }
                     }
                 }
-          }
-      }
-    },
-    "/admin/mined-images": {
-      "get": {
-        "tags": "admin",
-        "summary": "Get all mined Images",
-        "description": "Get all mined Images",
-        "operationId": "getmineImages",
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "user successfully deleted",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object"
-    "definitions": {
-        "model.MineImageResponse": {
-            "type": "object",
-            "properties": {
-                "date_created": {
-                    "type": "string"
-                },
-                "date_modified": {
-                    "type": "string"
-                },
-                "image_name": {
-                    "type": "string"
-                },
-                "image_path": {
-                    "type": "string"
-                },
-                "text_content": {
-                    "type": "string"
+            }
         },
-        
         "/update-user": {
             "patch": {
                 "description": "Updates a User's information - email,firstName,lastName,password - Bearer token required - To change password, current_password, new_password and confirm_password(repeat of the new password) are required",
@@ -497,6 +402,54 @@
         }
     },
     "definitions": {
+        "model.Feedback": {
+            "type": "object",
+            "properties": {
+                "date_created": {
+                    "type": "string"
+                },
+                "feedback": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image_key": {
+                    "type": "string"
+                },
+                "is_helpful": {
+                    "type": "boolean"
+                },
+                "reviewer_email": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.FeedbackCreatedResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.FeedbackRequest": {
+            "type": "object",
+            "properties": {
+                "feedback": {
+                    "type": "string"
+                },
+                "image_key": {
+                    "type": "string"
+                },
+                "is_helpful": {
+                    "type": "boolean"
+                },
+                "reviewer_email": {
+                    "type": "string"
+                }
+            }
+        },
         "model.MinedImage": {
             "type": "object",
             "properties": {
@@ -562,16 +515,7 @@
                 "email": {
                     "type": "string"
                 }
-              }
             }
-
-          },
-          "500": {
-            "description": "unable to delete user",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object"
         },
         "model.UpdateUser": {
             "type": "object",
@@ -592,46 +536,6 @@
                     "type": "string"
                 },
                 "new_password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.User": {
-            "type": "object",
-            "required": [
-                "email",
-                "password",
-                "username"
-            ],
-            "properties": {
-                "date_created": {
-                    "type": "string"
-                },
-                "date_updated": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "first_name": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "last_name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "profile_key": {
-                    "type": "string"
-                },
-                "profile_url": {
                     "type": "string"
                 },
                 "username": {
@@ -732,9 +636,7 @@
                 "status": {
                     "type": "string"
                 }
-              }
             }
-          }
         }
     },
     "securityDefinitions": {
@@ -744,7 +646,4 @@
             "in": "header \"Bearer \u003cadd access token here\u003e\""
         }
     }
-  },
-  "schemes": ["http"],
-  "swagger": "2.0"
 }
